--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
     <div id="christmas-message">
         <h2>Chúc Nàng Giáng Sinh Dzui Dzẻ </h2>
         <div class="love-photos">
-            <img src="images/1.jpg" alt="Photo 1">
-            <img src="images/2.jpg" alt="Photo 2">
-            <img src="images/3.jpg" alt="Photo 3">
+            <img src="images/1.png" alt="Photo 1">
+            <img src="images/2.png" alt="Photo 2">
+            <img src="images/3.png" alt="Photo 3">
         </div>
     </div>
 
@@ -1340,3 +1340,4 @@
 </body>
 
 </html>
+
