--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <h2>Chúc Nàng Giáng Sinh Dzui Dzẻ </h2>
         <div class="love-photos">
             <img src="images/1.png" alt="Photo 1">
-            <img src="images/20.png" alt="Photo 2">
+            <img src="images/20.jpg" alt="Photo 2">
             <img src="images/41.png" alt="Photo 3">
         </div>
     </div>
@@ -1340,6 +1340,7 @@
 </body>
 
 </html>
+
 
 
 
